# Lite-Actor-Framework-in-Cpp

./: CMakeLists.txt  Readme.md
docs/tutorials/: Behavior Class.md  tutorial.md
src/actor/: abstract_actor.hpp  actor_address.hpp  attachable.hpp  behavior.hpp  blocking_actor.hpp  eventbased_actor.hpp  exit_monitor.hpp  local_actor.hpp  monitorable_actor.hpp
src/utils/: any_tuple.hpp  duration.hpp  intrusive_ptr.hpp  laf_error.hpp  message.hpp  utils.hpp
src/utils/DSL/: on.hpp  partial_function.hpp
testbench/: behavior_testbench.cpp
